--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/posts
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=blog
