--- a/blog/src/test/resources/snapshot.properties
+++ b/blog/src/test/resources/snapshot.properties
@@ -1,4 +1,5 @@
-serializer=au.com.origin.snapshots.serializers.v1.ToStringSnapshotSerializer
+serializer=au.com.origin.snapshots.jackson.serializers.v1.DeterministicJacksonSnapshotSerializer
+serializer.string=au.com.origin.snapshots.serializers.v1.ToStringSnapshotSerializer
 serializer.base64=au.com.origin.snapshots.serializers.v1.Base64SnapshotSerializer
 serializer.json=au.com.origin.snapshots.jackson.serializers.v1.JacksonSnapshotSerializer
 serializer.orderedJson=au.com.origin.snapshots.jackson.serializers.v1.DeterministicJacksonSnapshotSerializer
