--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -20,6 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <version>1.19.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>1.19.0</version>
             <scope>test</scope>
