--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,15 @@ jobs:
       with:
         java-version: 17
         distribution: temurin
-    - name: Package project
-      run: mvn -B -f blog/pom.xml clean package
+        cache: maven
+    - name: Compile
+      run: mvn -B -f blog/pom.xml compile
+    - name: Test
+      run: mvn -B -f blog/pom.xml test
+    - name: Package
+      run: mvn -B -f blog/pom.xml package
+    - run: mkdir artifact && cp target/*.jar artifact
+    - uses: actions/upload-artifact@v2
+      with:
+       name: Create artifact
+       path: artifact  
