--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,10 @@ jobs:
       with:
         java-version: 17
         distribution: temurin
-        cache: maven
-    - name: Compile
-      run: mvn -B -f blog/pom.xml compile
-    - name: Test
-      run: mvn -B -f blog/pom.xml test
     - name: Package
       run: mvn -B -f blog/pom.xml package
     - run: mkdir artifact && cp blog/target/*.jar artifact
     - uses: actions/upload-artifact@v2
       with:
-       name: Create artifact
+       name: blog
        path: artifact  
