--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       with:
         java-version: 17
         distribution: temurin
+    - name: Cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('blog/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2      
     - name: Package
       run: mvn -B -f blog/pom.xml package
     - run: mkdir artifact && cp blog/target/*.jar artifact
