--- a/blog/src/main/resources/application-docker.properties
+++ b/blog/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
   org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
   org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://mongodb:27017
 spring.data.mongodb.database=blog
 
 spring.liquibase.change-log=classpath:/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
