--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,13 @@ jobs:
         restore-keys: ${{runner.os}}-m2
     - name: Package
       run: mvn -B -f blog/pom.xml package
-    - run: mkdir artifact && cp blog/target/*.jar artifact
-    - uses: actions/upload-artifact@v3
+    - name: Publish Test Report
+      if: success() || failure()
+      uses: scacap/action-surefire-report@v1
+    - name: Publish to Docker Hub
+      uses: docker/build-push-action@v1
       with:
-       name: blog
-       path: artifact
+        username: ${{secrets.DOCKERHUBUSER}}
+        password: ${{secrets.DOCKERHUB}}
+        repository: localstradedocker/blog
+        tags: blog_latest
