Change secret key

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       run: >
         curl
         -X POST https://api.github.com/repos/EvalVis/blogDocker/dispatches
-        -u ${{secrets.ACTIONS_KEY}}
+        -u ${{secrets.GITHUBTOKEN}}
         -H "Accept: application/vnd.github.everest-preview+json"
         -H "Content-Type: application/json"
         --data '{"event_type": "trigger_tests"}'
