--- a/blog/src/main/resources/application-docker.yaml
+++ b/blog/src/main/resources/application-docker.yaml
@@ -3,6 +3,17 @@ spring:
     mongodb:
       uri: mongodb://mongodb:27017
       database: blog
+  datasource:
+    url: jdbc:postgresql://postgres_blog:5432/users
+    username: blog
+    password: admin
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  liquibase:
+    change-log: classpath:/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
 
 management:
   endpoint:
