--- a/blog/src/main/resources/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
+++ b/blog/src/main/resources/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: classpath:/liquibase/postgresql/changelog/001_user.sql
+  - include:
+      file: classpath:/liquibase/postgresql/changelog/002_user.sql
