--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -14,10 +14,25 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>blog</name>
     <description>blog</description>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub repo</name>
+            <url>https://maven.pkg.github.com/EvalVis/Security</url>
+        </repository>
+    </repositories>
+
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>com.evalvis</groupId>
+            <artifactId>security</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
