--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         distribution: temurin
     - uses: s4u/maven-settings-action@v2.8.0
       with:
+        override: false
         servers: |
           [{
             "id": "github",
