--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         key: ${{runner.os}}-m2-${{hashFiles('blog/pom.xml')}}
         restore-keys: ${{runner.os}}-m2
     - name: Package
-      run: mvn -B -s /.github/workflows/maven-settings.xml -f blog/pom.xml package
+      run: mvn -B -s /.github/maven-settings.xml -f blog/pom.xml package
       env:
         ACCESS_TOKEN: ${{ secrets.PACKAGE_READ }}
     - name: Publish Test Report
