--- a/blog/src/main/resources/application-docker.yaml
+++ b/blog/src/main/resources/application-docker.yaml
@@ -1,5 +1,9 @@
 spring:
   data:
+    redis:
+      host: redis
+      port: 6379
+      cacheName: jwtBlacklist
     mongodb:
       uri: mongodb://mongodb:27017
       database: blog
