Change http to https

--- a/blog/src/main/resources/application-docker.yaml
+++ b/blog/src/main/resources/application-docker.yaml
@@ -1,3 +1,10 @@
+server:
+  ssl:
+    key-store: classpath:blog.p12
+    key-store-password: ${ssl_blog_passphrase}
+    key-store-type: pkcs12
+    key-alias: blog
+    key-password: ${ssl_blog_passphrase}
 spring:
   data:
     redis:
