Alert on duplicate logins (loging in when another refresh token is not expired or logged out)

--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -185,6 +185,8 @@
                         <exclude>com/evalvis/blog/logging/ControllerException.class</exclude>
                         <exclude>com/evalvis/blog/comment/CommentRepository$CommentEntry.class</exclude>
                         <exclude>com/evalvis/blog/user/UserRepository$UserEntry.class</exclude>
+                        <exclude>com/evalvis/blog/user/LoginStatusRepository$LoginStatusEntry.class</exclude>
+                        <exclude>com/evalvis/blog/user/LoginStatusRepository$LoginStatusEntryId.class</exclude>
                         <exclude>com/evalvis/blog/logging/BadRequestException.class</exclude>
                         <exclude>com/evalvis/blog/logging/RestNotFoundException.class</exclude>
                     </excludes>
