--- a/blog/src/main/resources/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
+++ b/blog/src/main/resources/liquibase/postgresql/changelog/liquibase.changelog_master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: classpath:/liquibase/postgresql/changelog/001_user.sql
   - include:
       file: classpath:/liquibase/postgresql/changelog/001_password_reset.sql
+  - include:
+      file: classpath:/liquibase/postgresql/changelog/001_login_status.sql
