Update prod config

--- a/blog/src/main/resources/application-prod.yaml
+++ b/blog/src/main/resources/application-prod.yaml
@@ -27,10 +27,10 @@ spring:
         debug: false
   data:
     mongodb:
-      uri: mongodb://localhost:27017
+      uri: mongodb://${mongo_url}
       database: blog
   datasource:
-    url: jdbc:postgresql://localhost:5432/users
+    url: jdbc:postgresql://${postgres_blog_url}/users
     username: blog
     password: ${postgres_blog_password}
     driver-class-name: org.postgresql.Driver
