Add metrics flag in prod.

--- a/blog/src/main/resources/application-prod.yaml
+++ b/blog/src/main/resources/application-prod.yaml
@@ -54,7 +54,7 @@ spring:
 management:
   endpoint:
     prometheus:
-      enabled: true
+      enabled: ${metrics_enabled}
   endpoints:
     web:
       exposure:
@@ -62,4 +62,4 @@ management:
   prometheus:
     metrics:
       export:
-        enabled: true
+        enabled: ${metrics_enabled}
