--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>RELEASE</version>
+            <version>3.2.3</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
