--- a/blog/src/main/resources/application-prod.yaml
+++ b/blog/src/main/resources/application-prod.yaml
@@ -50,6 +50,10 @@ spring:
           google:
             client-id: ${google_client_id}
             client-secret: ${google_client_secret}
+      login:
+        oauth2:
+          authorization-request-base-uri: ${blog_url}/login/oauth2/authorization
+          authorization-response-base-uri: ${blog_url}/login/oauth2/code
 
 management:
   endpoint:
