--- a/blog/src/test/resources/application-it.properties
+++ b/blog/src/test/resources/application-it.properties
@@ -1,3 +1,4 @@
+blog.blog-url=https://localhost:8080
 blog.frontend-url=https://localhost:3000
 blog.http-masking-turned-on=false
 spring.main.banner-mode=off
